--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "dependencies": {
     "animejs": "^3.1.0",
     "babel-plugin-styled-components": "^1.12.0",
+    "camelcase": "^8.0.0",
     "gatsby": "^5.13.7",
     "gatsby-plugin-google-analytics": "^5.13.1",
     "gatsby-plugin-image": "^3.13.1",
